--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="Image/logo.png" />
   </head>
+
   <body>
     <header id="home">
       <div id="nav" class="fixed-top">
@@ -75,7 +76,9 @@
           </p>
           <a href="About-Page/about.html" class="CU">Read more</a>
         </div>
+      </div>
 
+      <div class="container">
         <div class="container-box">
           <p class="sections-title">Service</p><br />
           <p
@@ -148,9 +151,9 @@
 
           <div class="copyRights">
             <p>Powered By:</p>
-            <a href="https://www.instagram.com/im_edoni/" target="_blank"
-              >Edon Abdullahu</a
-            >
+            <a href="https://www.instagram.com/im_edoni/" target="_blank">
+              Edon Abdullahu
+            </a>
           </div>
         </footer>
       </div>
