--- a/index.html
+++ b/index.html
@@ -1,92 +1,95 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Web Portfolio</title>
-    <link rel="stylesheet" href="Contact-Page/styleContact.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="Image/logo.png" />
-  </head>
 
-  <body>
-    <header id="home">
-      <div id="nav" class="fixed-top">
-        <div class="navBar" id="logo">
-          <a href="index.html">VELO</a>
-        </div>
-        <div class="navBar colorH">
-          <a href="index.html">HOME</a>
-        </div>
-        <div class="navBar">
-          <a href="About-Page/about.html">ABOUT</a>
-        </div>
-        <div class="navBar">
-          <a href="Service-Page/service.html">SERVICE</a>
-        </div>
-        <div class="navBar">
-          <a href="Contact-Page/Contact.html">CONTACT</a>
-        </div>
+<head>
+  <title>Web Portfolio</title>
+  <link rel="stylesheet" href="Contact-Page/styleContact.css" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="Image/logo.png" />
+</head>
 
-        <div id="login">
-          <a href="Login-Page/LogIn.html">Sign out</a>
-        </div>
+<body>
+  <header id="home">
+    <div id="nav" class="fixed-top">
+      <div class="navBar" id="logo">
+        <a href="index.html">VELO</a>
+      </div>
+      <div class="navBar colorH">
+        <a href="index.html">HOME</a>
+      </div>
+      <div class="navBar">
+        <a href="About-Page/about.html">ABOUT</a>
+      </div>
+      <div class="navBar">
+        <a href="Service-Page/service.html">SERVICE</a>
+      </div>
+      <div class="navBar">
+        <a href="Contact-Page/Contact.html">CONTACT</a>
       </div>
 
-      <div class="row">
-        <div class="col-6 home-left">
-          <div class="con">
-            <p>John Doe</p>
-            <a href="Service-Page/service.html">
-              <button type="button" class="btn">Service</button>
-            </a>
-            <a href="Contact-Page/Contact.html">
-              <button type="button" class="btnTrans">Contact</button>
-            </a>
-          </div>
-        </div>
-        <div class="col-6 home-right"> </div>
+      <div id="login">
+        <a href="Login-Page/LogIn.html">Sign out</a>
       </div>
-    </header>
+    </div>
 
-    <main>
-      <div class="container">
-        <div class="container-box">
-          <img src="Image/mountain.png" alt="" />
-        </div>
-        <div class="container-box">
-          <p id="p1">About</p> <br />
-          <p class="desc1"
-            >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
-            at tortor dui. Integer purus justo, volutpat sit amet nisl vitae,
-            tempus ullamcorper magna. Cras eleifend sem non pretium rutrum.
-            Donec convallis hendrerit velit, id rhoncus eros consectetur non.
-            Sed at mi non turpis auctor blandit. In semper, sapien eu
-            pellentesque ultrices, quam mauris fermentum nulla, vel ornare justo
-            erat nec orci. Cras eleifend, nisi eu egestas hendrerit.
-          </p>
-        </div>
-        <div class="container-box">
-          <p class="desc2"
-            >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
-            at tortor dui. Integer purus justo, volutpat sit amet nisl vitae,
-            tempus ullamcorper magna. Cras eleifend sem non pretium rutrum.
-            Donec convallis hendrerit velit, id rhoncus eros consectetur non.
-            Sed at mi non turpis auctor blandit. In semper, sapien eu
-            pellentesque ultrices, quam mauris fermentum nulla, vel ornare justo
-            erat nec orci. Cras eleifend, nisi eu egestas hendrerit.
-          </p>
-          <a href="About-Page/about.html" class="CU">Read more</a>
+    <div class="row">
+      <div class="col-6 home-left">
+        <div class="con">
+          <p>John Doe</p>
+          <a href="Service-Page/service.html">
+            <button type="button" class="btn">Service</button>
+          </a>
+          <a href="Contact-Page/Contact.html">
+            <button type="button" class="btnTrans">Contact</button>
+          </a>
         </div>
       </div>
+      <div class="col-6 home-right"> </div>
+    </div>
+  </header>
 
-      <div class="container">
-        <div class="container-box">
-          <p class="sections-title">Service</p><br />
-          <p
-            >Here it's my services that can i do, my<br />
-            skills and my experience.</p
-          ><br />
-          <a href="Service-Page/service.html" class="CU">Learn more</a>
-        </div>
+  <main>
+    <section class="content">
+      <!-- <div class="container-box"> -->
+      <img src="Image/mountain.png" alt="" />
+      <!-- </div> -->
+      <div class="container-box">
+        <p id="p1">About</p> <br />
+        <p class="desc1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+          at tortor dui. Integer purus justo, volutpat sit amet nisl vitae,
+          tempus ullamcorper magna. Cras eleifend sem non pretium rutrum.
+          Donec convallis hendrerit velit, id rhoncus eros consectetur non.
+          Sed at mi non turpis auctor blandit. In semper, sapien eu
+          pellentesque ultrices, quam mauris fermentum nulla, vel ornare justo
+          erat nec orci. Cras eleifend, nisi eu egestas hendrerit.
+        </p>
+      </div>
+      <div class="container-box">
+        <p class="desc2">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent at
+          tortor dui. Integer purus justo, volutpat sit amet nisl vitae,
+          tempus ullamcorper magna. Cras eleifend sem non pretium rutrum.
+          Donec convallis hendrerit velit, id rhoncus eros consectetur non.
+          Sed at mi non turpis auctor blandit. In semper, sapien eu
+          pellentesque ultrices, quam mauris fermentum nulla, vel ornare justo
+          erat nec orci. Cras eleifend, nisi eu egestas hendrerit.
+        </p>
+        <a href="About-Page/about.html" class="CU">Read more</a>
+      </div>
+    </section>
+    <section class="space"></section>
+
+    <!--  -->
+
+    <section class="content">
+      <div class="container-box">
+        <p class="sections-title">Service</p><br />
+        <p>
+          Here it's my services that can i do, my<br />
+          skills and my experience. </p><br />
+        <a href="Service-Page/service.html" class="CU">Learn more</a>
+      </div>
+      <div>
         <div class="container-box">
           <div class="box">
             <p class="p1"> Web Developer </p>
@@ -109,54 +112,57 @@
             <p class="p4"> Adobe XD, Adobe Photoshop, Adobe Illustrator </p>
           </div>
         </div>
-
-        <div class="container-box"></div>
-        <div class="container-box">
-          <div class="box">
-            <p class="p1"> Digital Design </p>
-            <p class="p2"> 1 year experience </p>
-            <p class="p3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing <br />
-              elit. Praesent at tortor dui.
-            </p>
-            <p class="p4"> Adobe Illustrator, Adobe Photoshop </p>
-          </div>
-        </div>
-        <div class="container-box">
-          <div class="box">
-            <p class="p1"> Photo & Video Editing </p>
-            <p class="p2"> 1 year experience </p>
-            <p class="p3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing <br />
-              elit. Praesent at tortor dui.
-            </p>
-            <p class="p4">
-              Adobe Photoshop, Adobe Lightroom, Adobe Premiere Pro
-            </p>
-          </div>
-        </div>
-
-        <!-- --------------------------------- -->
-        <hr />
-        <footer>
-          <p id="parg">Find me on</p>
-
-          <div class="footers">
-            <a href="#instagram">Instagram</a>
-            <a href="#Facebook">Facebook</a>
-            <a href="#Youtube">Youtube</a>
-            <a href="#GitHub">GitHub</a>
-            <a href="#Reddit">Reddit</a>
-          </div>
-
-          <div class="copyRights">
-            <p>Powered By:</p>
-            <a href="https://www.instagram.com/im_edoni/" target="_blank">
-              Edon Abdullahu
-            </a>
-          </div>
-        </footer>
       </div>
-    </main>
-  </body>
+     <div>
+      <div class="container-box">
+        <div class="box">
+          <p class="p1"> Digital Design </p>
+          <p class="p2"> 1 year experience </p>
+          <p class="p3">
+            Lorem ipsum dolor sit amet, consectetur adipiscing <br />
+            elit. Praesent at tortor dui.
+          </p>
+          <p class="p4"> Adobe Illustrator, Adobe Photoshop </p>
+        </div>
+      </div>
+      <div class="container-box">
+        <div class="box">
+          <p class="p1"> Photo & Video Editing </p>
+          <p class="p2"> 1 year experience </p>
+          <p class="p3">
+            Lorem ipsum dolor sit amet, consectetur adipiscing <br />
+            elit. Praesent at tortor dui.
+          </p>
+          <p class="p4">
+            Adobe Photoshop, Adobe Lightroom
+          </p>
+        </div>
+      </div>
+     </div>
+    </section>
+
+    <!-- --------------------------------- -->
+    <hr />
+    <footer>
+      <p id="parg">Find me on</p>
+
+      <div class="footers">
+        <a href="#instagram">Instagram</a>
+        <a href="#Facebook">Facebook</a>
+        <a href="#Youtube">Youtube</a>
+        <a href="#GitHub">GitHub</a>
+        <a href="#Reddit">Reddit</a>
+      </div>
+
+      <div class="copyRights">
+        <p>Powered By:</p>
+        <a href="https://www.instagram.com/im_edoni/" target="_blank">
+          Edon Abdullahu
+        </a>
+      </div>
+    </footer>
+    </div>
+  </main>
+</body>
+
 </html>
