Contact form update

--- a/Contact-Page/Contact.html
+++ b/Contact-Page/Contact.html
@@ -1,59 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="icon" href="../Image/contact.png">
+  <head>
+    <link rel="icon" href="../Image/contact.png" />
     <script src="../JS/contact.js"></script>
-    <link rel="stylesheet" href="styleContact.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="styleContact.css" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header id="home">
-        <div id="nav" class="fixed-top">
-            <div class="navBar" id="logo">
-                <a href="../index.html">VELO</a>
-            </div>
-            <div class="navBar">
-                <a href="../index.html">HOME</a>
-            </div>
-            <div class="navBar">
-                <a href="../About-Page/about.html">ABOUT</a>
-            </div>
-            <div class="navBar">
-                <a href="../Service-Page/service.html">SERVICE</a>
-            </div>
-            <div class="navBar colorH">
-                <a href="Contact.html">CONTACT</a>
-            </div>
-
-            <div id="login">
-                <a href="../Login-Page/LogIn.html">Sign out</a>
-            </div>
-
+      <div id="nav" class="fixed-top">
+        <div class="navBar" id="logo">
+          <a href="../index.html">VELO</a>
         </div>
+        <div class="navBar">
+          <a href="../index.html">HOME</a>
+        </div>
+        <div class="navBar">
+          <a href="../About-Page/about.html">ABOUT</a>
+        </div>
+        <div class="navBar">
+          <a href="../Service-Page/service.html">SERVICE</a>
+        </div>
+        <div class="navBar colorH">
+          <a href="Contact.html">CONTACT</a>
+        </div>
+
+        <div id="login">
+          <a href="../Login-Page/LogIn.html">Sign out</a>
+        </div>
+      </div>
     </header>
     <main>
-        <div class="middle">
-            <div class="box-contact">
-                <p class="text">Contact</p>
-            </div>
-            <div class="box-contact">
-                <p>Please, contact us for anythink !</p>
-            </div>
-            <div class="box-contact">
-                <form action="">
-                    <input type="text" placeholder="Name*" id="name" required>
-                    <input type="text" placeholder="Surname*" id="surname" required>
-                    <input type="email" placeholder="Email*" id="email" required>
-                    <textarea name="" id="textarea" cols="50" rows="10" placeholder="Message*" required></textarea>
-                </form>
-            </div>
-            <div class="box-contact">
-                <a>
-                    <button type="submit" value="Send" onclick="send()">Send</button>
-                </a>
-            </div>
+      <div class="middle">
+        <div class="box-contact">
+          <p class="text">Contact</p>
         </div>
+        <div class="box-contact">
+          <p>Please, contact us for anythink !</p>
+        </div>
+        <div class="box-contact">
+          <form action="">
+            <input type="text" placeholder="Name*" id="name" required />
+            <input type="text" placeholder="Surname*" id="surname" required />
+            <input type="email" placeholder="Email*" id="email" required />
+            <textarea
+              name=""
+              id="textarea"
+              cols="50"
+              rows="10"
+              placeholder="Message*"
+              required
+            ></textarea>
+          </form>
+        </div>
+        <div class="box-contact">
+          <a>
+            <button type="submit" value="Send" onclick="send()">Send</button>
+          </a>
+        </div>
+      </div>
     </main>
-</body>
+  </body>
 </html>
